<resources>
    <string name="app_name">InChat</string>

    <!-- LoginFragment -->
    <string name="login_title">登录</string>
    <string name="login_country">国家或区域</string>
    <string name="login_chain">中国</string>
    <string name="login_chain_code">+86</string>
    <string name="login_phone_hint">请填写手机号码</string>
    <string name="login_verify_code">验证码</string>
    <string name="login_verify_code_hint">请填写验证码</string>
    <string name="login_send_verify_code">获取验证码</string>
    <string name="login_send_verify_timer">%1$ss后重新发送</string>
    <string name="login_ing">正在登录……</string>
    <string name="login_goto">登录</string>

    <!-- MainFragment -->
    <string name="main_navi_message">消息</string>
    <string name="main_navi_chat">匿聊</string>
    <string name="main_navi_words">匿贴</string>
    <string name="main_navi_setting">设置</string>

    <!-- MessageFragment -->
    <string name="message_title">会话</string>
    <string name="message_remove_simple">删除会话</string>
    <string name="message_remove_history">删除会话和消息</string>
</resources>
